fixed the error with overlapping css

--- a/app/assets/stylesheets/components/_how-cards.scss
+++ b/app/assets/stylesheets/components/_how-cards.scss
@@ -1,3 +1,7 @@
+.container {
+  box-shadow: none;
+}
+
 .how-cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
